test/sema/trait_objects/non_pointee_trait_object_local_variable.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  // CHECK: [[# @LINE + 1 ]]:10: error: only pointers to trait objects are allowed
  let x: impl Foo;
}
